# savko

./: package-lock.json  package.json  svelte.config.js  tsconfig.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/routes/: +layout.svelte  +page.svelte
