[package]
name = "savko"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "savko_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.6", features = [] }

[dependencies]
tauri = { version = "2.3.0", features = [] }
tauri-plugin-opener = "2.2.5"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
arboard = "3.4.1"
chrono = "0.4.40"
chrono-tz = "0.10.1"
